--- a/style.css
+++ b/style.css
@@ -78,3 +78,14 @@ a:hover {
 a:hover:after {
     width: 100%;
 }
+
+#resultado {
+    margin-top: 20px;
+    font-family: "Itim", cursive;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.5em;
+    color: #c8ec43; /* Cor do texto */
+    position: relative;
+    z-index: 1;
+}
